--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -73,11 +73,15 @@ body {
     padding-right: 0;
   }
   /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
+  .header {    margin-bottom: 30px;  }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
   }
+  .canv_div{width:600px; height:400px; background:#aaa; position: relative; padding: 20px}
+  .editable{width:250px; font-size: 12px; color:#fff; font-weight: bold; outline: none; float: left; margin-left: 40px}
+  .image_holder{overflow:hidden; height:300px; width:250px; background:#eee; float: left}
+  .image_slider{position:relative; overflow: hidden; width: 250px; height: 250px; background:#fff}
+  .img_nav{height:25px; width: 250px; box-sizing: border-box; padding:3px; text-align: center; cursor:pointer}
+  ul{list-style: none; padding: 0; margin: 0}
 }
