--- a/app/develop/scss/main.scss
+++ b/app/develop/scss/main.scss
@@ -1,5 +1,63 @@
-@import "foundation";
+@charset 'utf-8';
 
-.opthu{
-    color: aliceblue;
+@import 'foundation';
+@import 'settings';
+@import 'motion-ui';
+
+@include foundation-global-styles;
+@include foundation-grid;
+@include foundation-typography;
+@include foundation-button;
+@include foundation-forms;
+@include foundation-visibility-classes;
+@include foundation-float-classes;
+//@include foundation-accordion;
+//@include foundation-accordion-menu;
+//@include foundation-badge;
+@include foundation-breadcrumbs;
+@include foundation-button-group;
+@include foundation-callout;
+@include foundation-close-button;
+//@include foundation-drilldown-menu;
+//@include foundation-dropdown;
+//@include foundation-dropdown-menu;
+@include foundation-flex-video;
+@include foundation-label;
+@include foundation-media-object;
+@include foundation-menu;
+@include foundation-off-canvas;
+@include foundation-orbit;
+@include foundation-pagination;
+//@include foundation-progress-bar;
+@include foundation-slider;
+@include foundation-sticky;
+@include foundation-reveal;
+@include foundation-switch;
+@include foundation-table;
+@include foundation-tabs;
+@include foundation-thumbnail;
+@include foundation-title-bar;
+@include foundation-tooltip;
+@include foundation-top-bar;
+
+@include motion-ui-transitions;
+@include motion-ui-animations;
+
+@import url(http://fonts.googleapis.com/css?family=Armata|Michroma);
+
+
+//---------------------------------------------------APP CSS
+//__________________________________________________________
+
+
+.fa-app-wrapper{
+  width: 100%;
+    height: 100%;
+}
+
+.fa-app-view{
+    max-width:600px;
+    min-height: 450px;
+    margin: 0 auto;
+    background: $secondary-color;
 }
