--- a/app/develop/scss/main.scss
+++ b/app/develop/scss/main.scss
@@ -1,4 +1,5 @@
 @charset 'utf-8';
+@import url(http://fonts.googleapis.com/css?family=Armata|Michroma);
 
 @import 'foundation';
 @import 'settings';
@@ -14,27 +15,27 @@
 //@include foundation-accordion;
 //@include foundation-accordion-menu;
 //@include foundation-badge;
-@include foundation-breadcrumbs;
+//@include foundation-breadcrumbs;
 @include foundation-button-group;
 @include foundation-callout;
 @include foundation-close-button;
 //@include foundation-drilldown-menu;
 //@include foundation-dropdown;
 //@include foundation-dropdown-menu;
-@include foundation-flex-video;
+//@include foundation-flex-video;
 @include foundation-label;
 @include foundation-media-object;
 @include foundation-menu;
 @include foundation-off-canvas;
-@include foundation-orbit;
+//@include foundation-orbit;
 @include foundation-pagination;
 //@include foundation-progress-bar;
-@include foundation-slider;
+//@include foundation-slider;
 @include foundation-sticky;
 @include foundation-reveal;
 @include foundation-switch;
-@include foundation-table;
-@include foundation-tabs;
+//@include foundation-table;
+//@include foundation-tabs;
 @include foundation-thumbnail;
 @include foundation-title-bar;
 @include foundation-tooltip;
@@ -43,9 +44,9 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
-@import url(http://fonts.googleapis.com/css?family=Armata|Michroma);
 
 
+//----------------------------------------------------------
 //---------------------------------------------------APP CSS
 //__________________________________________________________
 
@@ -60,4 +61,102 @@
     min-height: 450px;
     margin: 0 auto;
     background: $secondary-color;
+    background-image: url(../../images/fa-bg-pattern.png);
+}
+
+//---------------------------------------------------Header Area
+
+.fa-header{
+    @include grid-row();
+    background-color: #fff;
+    min-height: 50px;
+    padding:30px;
+}
+
+.fa-logo-area{
+    @include grid-column(6);
+}
+
+.fa-logo{
+    height: 70px;
+}
+
+.fa-login-area{
+    @include grid-column(6);
+}
+
+.fa-profile-pic{
+    height: 70px;
+    float: right;
+}
+
+.fa-login-btn{
+    float:right;
+}
+
+//---------------------------------------------------Card Area
+
+.fa-card-opt-area{
+    min-height: 450px;
+    padding: 50px;
+}
+
+.fa-card{
+    width: 100%;
+}
+
+.fa-card-nav-area{
+    @include grid-row();
+}
+
+.fa-card-nav-prev{
+    @include grid-column(3);
+}
+
+.fa-card-nav-count{
+    @include grid-column(6);
+}
+
+.fa-card-nav-next{
+    @include grid-column(3);
+}
+
+//---------------------------------------------------Actions Area
+
+.fa-action-bar{
+    @include grid-row;
+    background-color: #fff;
+    padding: 10px;
+}
+
+.fa-edit-btn-area{
+    @include grid-column(4);
+}
+
+.fa-like-btn-area{
+    @include grid-column(2);
+}
+
+.fa-post-btn-area{
+    @include grid-column(2);
+}
+
+.fa-share-btn-area{
+    @include grid-column(4);
+}
+
+.fa-share-btn{
+}
+
+//---------------------------------------------------Credits Area
+
+.fa-credit-bar{
+    @include grid-column-row();
+    background-color:#e3e3e3;
+    ul{
+        list-style-type:none;
+        li{
+            display: inline-block;
+        }
+    }
 }
