--- a/app/views/main.html
+++ b/app/views/main.html
@@ -33,15 +33,47 @@
             </div>
         </div>
         
+        <div class="fa-edit-panel" id="fa-edit-panel" ng-show="toggler">
+           <div class="fa-edit-options">
+               <div class="fa-editable-msg" id="message"> 
+                   I want to edit this text easily.
+               </div>
+               
+              <div class="fa-fb-friend-list">
+                <angucomplete class='floater' localdata="allfriends"
+                      id="friendlist"
+                      titlefield="name"
+                      searchfields="name"
+                      selectedobject="id"
+                      imagefield="picture.data.url"
+                      minlenght='3'
+                      placeholder="Search for friend" />
+              </div>
+               
+               <div class="fa-draw-btn">
+                   <button ng-click="draw()">Create Card</button>
+               </div>
+           </div>
+           
+           <div class="fa-cavass-draw">
+               <div ng-show="showcanvass">
+                    <canvas id="card" width="600" height="400" style="border:1px solid #d3d3d3;">
+                        Your browser does not support the HTML5 canvas tag.
+                    </canvas>
+                </div>
+            </div>
+            
+        </div>
+        
         <div class="fa-action-bar">
             <div class="fa-edit-btn-area">
-                <button class="fa-edit-btn" type="button">Edit Message</button>
+                <a ng-model="toggler" ng-click="toggler=!toggler" class="fa-edit-btn">Edit Message</a>
             </div>
             <div class="fa-like-btn-area"></div>
             <div class="fa-post-btn-area"></div>
             <div class="fa-share-btn-area">
-                <button class="fa-share-btn" ng-show="user.name!='login'" ng-click="FBgetfriends()">
-                    Share with friends
+                <button class="fa-share-btn" ng-show="user.name!='login'" ng-click="saveandupload()">
+                    Share with friend
                 </button>
                 <a class="fa-share-btn" ng-show="user.name=='login'" ng-click="FBlogin()">Login to share</a>
             </div>
@@ -56,32 +88,47 @@
         </div>
 
 
-        <a ng-click="logout()" ng-show="user.name!='login'" class="">Log out</a>
+       
         
-        <div class="column small-12 medium-6" ng-show="user.name=='login'">
-            <button class="" ng-click="FBlogin()">
-            <i class="fa fa-facebook"></i> Login</button>
-        </div>
+
 
         
-        <div ng-show="user.name!='login'" >
+    
+        
+        
+<!--  
+   
+    <div class="image_holder">
+    <div class="img_nav" id="image_up" ng-click="select_pic(0)">Up</div>
+
+    <div class="img_nav" id="image_down" ng-click="select_pic(1)">Down</div>
+            </div> 
+    <div ng-show="user.name!='login'" >
 
             <button class="button large round expand mq-facebook" ng-click="FBgetfriends()">get friends</button>
+    </div>
+        
+    <div class="image_slider">
+
+        <img id="card_img" ng-src="images/{{mainurl}}" width="250px" height="250px">
+
+    </div>
+    
+    <div ng-show="showcanvass">
+            <canvas id="card" width="600" height="400" style="border:1px solid #d3d3d3;">Your browser does not support the HTML5 canvas tag.</canvas>
+            <div ng-click="saveandupload()">Save Image</div>
         </div>
+
+        <canvas id="card" width="600" height="400" style="border:1px solid #d3d3d3;">Your browser does not support the HTML5 canvas tag.          </canvas> 
+        
+        <div class="fa-editable-msg" id="message"> I want to edit this text easily.</div>
+        
+        
         <div class="canv_div">
-            <div class="image_holder">
-                <div class="img_nav" id="image_up" ng-click="select_pic(0)">Up</div>
-                <div class="image_slider">
 
+            
 
-                    <img id="card_img" ng-src="images/{{mainurl}}" width="250px" height="250px">
-
-                </div>
-                <div class="img_nav" id="image_down" ng-click="select_pic(1)">Down</div>
-            </div>
-            <div class="editable" id="message"> I want to edit this text easily.</div>
-
-            <div class=""><button ng-click="draw()">Draw</button></div>
+            
             <div>
                 <angucomplete class='floater' localdata="allfriends"
                       id="friendlist"
@@ -90,18 +137,9 @@
                       selectedobject="id"
                       imagefield="picture.data.url"
                       minlenght='3'
-                      placeholder="Type Friend's name" />
+                      placeholder="Search for friend" />
               </div>
         </div>
-        <div ng-show="showcanvass">
-            <canvas id="card" width="600" height="400" style="border:1px solid #d3d3d3;">Your browser does not support the HTML5 canvas tag.</canvas>
-            <div class="button link" ng-click="saveandupload()">Save Image</div>
-        </div>
-
-        <canvas id="card" width="600" height="400" style="border:1px solid #d3d3d3;">Your browser does not support the HTML5 canvas tag.          </canvas> 
-        
-<!--   
-     
 -->
 
 </div>
